<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customerMapActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerMapActivity">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logout"
            android:text="@string/Logout"/>

        <Button
            android:layout_alignParentRight="true"
            android:id="@+id/btnSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/btnSetting"/>

        <androidx.cardview.widget.CardView
            android:layout_below="@+id/btnSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp">

            <fragment android:id="@+id/autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>



    <Button
        android:id="@+id/btnRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCallUber"
        android:layout_gravity="bottom"/>
</FrameLayout>
